--- a/app/src/main/res/layout/fragment_direction.xml
+++ b/app/src/main/res/layout/fragment_direction.xml
@@ -23,7 +23,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center|bottom"
-                android:background="@drawable/bac"
+                android:background="@drawable/bg"
                 android:orientation="vertical">
 
 
@@ -34,21 +34,20 @@
                    android:layout_gravity="right">
                    <ImageView
                        android:id="@+id/btnMusic"
-                       android:layout_width="35dp"
+                       android:layout_width="36dp"
                        android:layout_height="36dp"
-                       android:layout_gravity="right|top"
+                       android:layout_gravity="center|top"
                        android:layout_marginBottom="60dp"
-                       android:layout_marginRight="10dp"
+                       android:layout_marginRight="13dp"
                        android:layout_marginLeft="10dp"
                        app:srcCompat="@drawable/ic_music" />
                    <ImageView
                        android:id="@+id/btnShare"
-                       android:layout_width="35dp"
+                       android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_gravity="right|top"
                        android:layout_marginBottom="60dp"
                        android:layout_marginRight="10dp"
-                       android:layout_marginLeft="30dp"
                        android:visibility="invisible"
                        app:srcCompat="@drawable/share" />
                </LinearLayout>
