--- a/app/src/main/res/layout/fragment_user_info.xml
+++ b/app/src/main/res/layout/fragment_user_info.xml
@@ -192,7 +192,7 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="114dp">
+                android:layout_height="match_parent">
 
                 <Button
                     android:id="@+id/btnConfirm"
